--- a/Front/src/tpl/invoices-update-dialog.html
+++ b/Front/src/tpl/invoices-update-dialog.html
@@ -11,54 +11,51 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Billing name<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                    <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <input type="text" name="billingname" class="form-control" ng-model="item.billingname" required>
+                    <span style="color:red" ng-show="editForm.billingname.$dirty && editForm.billingname.$invalid">
+                    <span ng-show="editForm.billingname.$error.required">Billing Name is required.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Address line 1<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <input type="text" name="addressline1" class="form-control" ng-model="item.addressline1" required>
+                    <span style="color:red" ng-show="editForm.addressline1.$dirty && editForm.addressline1.$invalid">
+                        <span ng-show="editForm.addressline1.$error.required">Name is required.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Address line 2: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
-                    </span>
+                    <input type="text" name="addressline2" class="form-control" ng-model="item.addressline2" required>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">City<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <input type="text" name="city" class="form-control" ng-model="item.city" required>
+                    <span style="color:red" ng-show="editForm.city.$dirty && editForm.city.$invalid">
+                        <span ng-show="editForm.city.$error.required">Name is required.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">ZIP / Postal code<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <input type="text" name="postalcode" class="form-control" ng-model="item.postalcode" required>
+                    <span style="color:red" ng-show="editForm.postalcode.$dirty && editForm.postalcode.$invalid">
+                        <span ng-show="editForm.postalcode.$error.required">Name is required.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">State / Region<span class="star-icon">*</span>: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
+                    <input type="text" name="stateregion" class="form-control" ng-model="item.stateregion" required>
+                    <span style="color:red" ng-show="editForm.stateregion.$dirty && editForm.stateregion.$invalid">
+                        <span ng-show="editForm.stateregion.$error.required">Name is required.</span>
                     </span>
                 </div>
             </div>
@@ -77,10 +74,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">SSN / TAX / VAT ID: </label>
                 <div class="col-sm-4">
-                    <input type="text" name="name" class="form-control" ng-model="item.name" required>
-                    <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
-                        <span ng-show="editForm.name.$error.required">Name is required.</span>
-                    </span>
+                    <input type="text" name="ssntaxvatid" class="form-control" ng-model="item.ssntaxvatid" required>
                 </div>
             </div>
         </form>
