--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -4,10 +4,10 @@
 
         <div flex></div>
         <div class="home">
-          <a ui-sref="app.report.campaign"><i class="material-icons">home</i></a>
+          <a class="home-link" ui-sref="app.report.campaign"><i class="material-icons">home</i></a>
         </div>
         <div class="setting">
-          <a ui-sref="setApp.profile"><i class="material-icons">settings</i></a>
+          <a class="setting-link" ui-sref="setApp.profile"><i class="material-icons">settings</i></a>
         </div>
         <ul class="nav navbar-nav navbar-right">
             <!-- dropdown for user -->
