--- a/Front/src/tpl/eventLog.html
+++ b/Front/src/tpl/eventLog.html
@@ -72,7 +72,7 @@
       <md-button class="md-raised add-another-btn" ng-show="false"><i class="material-icons">list</i>Details</md-button>
     </div>
     <div class="data-table">
-      <table md-table class="table">
+      <table class="table">
         <thead>
           <tr>
             <th>User</th>
