add eventlog detail

--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -56,7 +56,7 @@
 							<span class="pro-price">${{item.plan.price}}</span>/mo
 						</span>
 					</div>
-					<md-button class="md-raised copy-btn">Copy to clipboard</md-button>
+					<md-button class="md-raised copy-btn">Change Plan</md-button>
 				</div>
 			</div>
     </div>
