--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -76,6 +76,7 @@
 <script src="js/directives/form-validator.js"></script>
 <script src="js/services/resources.js"></script>
 <script src="js/services/values.js"></script>
+<script src="js/services/constants.js"></script>
 <script src="js/controllers/signin.js"></script>
 <script src="js/controllers/profile.js"></script>
 <script src="js/controllers/setUp.js"></script>
