change plan dialog update

--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -52,7 +52,7 @@
 							<span class="pro-price">${{item.plan.price}}</span>/mo
 						</span>
 					</div>
-					<md-button class="md-raised copy-btn">Change Plan</md-button>
+					<md-button class="md-raised copy-btn" ng-click="changePlan()">Change Plan</md-button>
 				</div>
 			</div>
     </div>
