--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
     <link rel="stylesheet" href="assets/css/app.css"/>
     <link rel="stylesheet" href="assets/css/my.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
+
     <!-- endbuild -->
 
     <style type="text/css">
