--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -10,7 +10,7 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Click URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.clickurl" required>
+          <input type="text" class="form-control" ng-model="item.clickurl">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.clickurl" ng-click="itemUrlClick('copy1')">{{btn.copy1}}</md-button>
@@ -19,7 +19,7 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Multi-offer click URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.multiofferclickurl" required>
+          <input type="text" class="form-control" ng-model="item.multiofferclickurl">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.multiofferclickurl" ng-click="itemUrlClick('copy2')">{{btn.copy2}}</md-button>
@@ -29,27 +29,27 @@
       <i class="material-icons">info_outline</i>
       <p>Server-to-server postback URLs are the most secure and reliable method to count conversions. Use the URLs below to pass conversions from affiliate networks. To get your postback links working you have to:</p>
       <p>1.Include the <<b>{clickId}</b>token in your offer URLs. For example, you can add ?subid={clickId} to the offer URL, to have the click ID passed to the postback via the <b>subid</b> parameter on the affiliate network/advertiser side.<br>
-      2.Copy-paste the postback URL to your affiliate network panel. Make sure to <b>replace the tokens</b> with affiliate network-specific tokens. The following is what your postback URL would look like on a HasOffers based network: <span class="blue-word">zx1jg.voluumtrk2.com/postback?cid={aff_sub} and payout={payout}</span></p>
+      2.Copy-paste the postback URL to your affiliate network panel. Make sure to <b>replace the tokens</b> with affiliate network-specific tokens. The following is what your postback URL would look like on a HasOffers based network: <span class="blue-word">{{mainDomain}}?cid={aff_sub} and payout={payout}</span></p>
       <p>Consult the affiliate network documentation or support to find out which tokens you should use to pass back click ID and payout. The payout parameter is optional, if you do not use it, you can manually specify the payout in the offer configuration. Do not put these URLs or any of the tracking pixels / scripts in your landing pages.</p>
     </div>
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Postback URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.postbackurl" required>
+          <input type="text" class="form-control" ng-model="item.postbackurl">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.postbackurl" ng-click="itemUrlClick('copy3')">{{btn.copy3}}</md-button>
         </div>
     </div>
-    <div class="form-group clearfix">
+    <!--<div class="form-group clearfix">
         <label class="col-sm-2 control-label">Secure postback URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.securepostbackurl" required>
+          <input type="text" class="form-control" ng-model="item.securepostbackurl">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.securepostbackurl" ng-click="itemUrlClick('copy4')">{{btn.copy4}}</md-button>
         </div>
-    </div>
+    </div>-->
     <div class="domain-p">
       <i class="material-icons">info_outline</i>
       <p>In cases when your affiliate network only supports client-side pixels, you can use a conversion pixel or script. Conversion pixels are cookie-based and so you have to use the same domain for the cookie to work correctly. The cid is also stored in a cookie, so conversion tracking will still work if the parameter is missing.</p>
@@ -59,7 +59,7 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking pixel URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.trackingpixelurl" required>
+          <input type="text" class="form-control" ng-model="item.trackingpixelurl">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.trackingpixelurl" ng-click="itemUrlClick('copy5')">{{btn.copy5}}</md-button>
@@ -68,7 +68,7 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking pixel</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.trackingpixel" required>
+          <input type="text" class="form-control" ng-model="item.trackingpixel">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.trackingpixel" ng-click="itemUrlClick('copy6')">{{btn.copy6}}</md-button>
@@ -77,7 +77,7 @@
     <div class="form-group clearfix">
         <label class="col-sm-2 control-label">Tracking script</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.trackingscript" required>
+          <input type="text" class="form-control" ng-model="item.trackingscript">
         </div>
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.trackingscript" ng-click="itemUrlClick('copy7')">{{btn.copy7}}</md-button>
